--- a/Final_Project1/coursedialog.ui
+++ b/Final_Project1/coursedialog.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>386</width>
+    <width>500</width>
     <height>425</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>386</width>
+    <width>500</width>
     <height>425</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>386</width>
+    <width>500</width>
     <height>425</height>
    </size>
   </property>
@@ -31,7 +31,7 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>99</x>
+     <x>140</x>
      <y>350</y>
      <width>195</width>
      <height>41</height>
@@ -85,19 +85,6 @@ background-color: rgb(234, 234, 234);</string>
      <y>180</y>
      <width>41</width>
      <height>20</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="descriptionEdit">
-   <property name="geometry">
-    <rect>
-     <x>99</x>
-     <y>210</y>
-     <width>261</width>
-     <height>121</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -189,7 +176,7 @@ background-color: rgb(234, 234, 234);</string>
     <rect>
      <x>-4</x>
      <y>-4</y>
-     <width>391</width>
+     <width>511</width>
      <height>71</height>
     </rect>
    </property>
@@ -206,7 +193,7 @@ background-color: rgb(60, 4, 76);</string>
     <rect>
      <x>0</x>
      <y>60</y>
-     <width>391</width>
+     <width>501</width>
      <height>41</height>
     </rect>
    </property>
@@ -215,7 +202,33 @@ background-color: rgb(60, 4, 76);</string>
 background-color: rgb(60, 4, 76);</string>
    </property>
    <property name="text">
-    <string>           Sequence Management System - Course Information</string>
+    <string>                        Sequence Management System - Course Information</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="descriptionEdit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>210</y>
+     <width>281</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultLabel">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>180</y>
+     <width>291</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
@@ -224,7 +237,6 @@ background-color: rgb(60, 4, 76);</string>
   <tabstop>courseIdEdit</tabstop>
   <tabstop>courseNameEdit</tabstop>
   <tabstop>creditEdit</tabstop>
-  <tabstop>descriptionEdit</tabstop>
   <tabstop>cancelButton</tabstop>
  </tabstops>
  <resources/>
