--- a/Final_Project1/studentdialog.ui
+++ b/Final_Project1/studentdialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>467</height>
+    <width>529</width>
+    <height>470</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>401</width>
-    <height>467</height>
+    <width>529</width>
+    <height>470</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>401</width>
-    <height>467</height>
+    <width>529</width>
+    <height>470</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,8 +31,8 @@
   <widget class="QWidget" name="layoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>109</x>
-     <y>409</y>
+     <x>170</x>
+     <y>420</y>
      <width>195</width>
      <height>30</height>
     </rect>
@@ -62,17 +62,64 @@ background-color: rgb(234, 234, 234);</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>120</y>
-     <width>241</width>
-     <height>261</height>
+     <x>-4</x>
+     <y>-4</y>
+     <width>541</width>
+     <height>71</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
+   <property name="styleSheet">
+    <string notr="true">image: url(:/Images/Images/ublogo.png);
+background-color: rgb(60, 4, 76);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>60</y>
+     <width>531</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(60, 4, 76);</string>
+   </property>
+   <property name="text">
+    <string>                            Sequence Management System - Student Information</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="resultLabel">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>170</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>120</y>
+     <width>277</width>
+     <height>272</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="IDLabel">
@@ -106,7 +153,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="1" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="FNameLabel">
@@ -140,7 +187,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="2" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="LNameLabel">
@@ -174,7 +221,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="3" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_9">
       <item>
        <widget class="QLabel" name="PassLabel">
@@ -205,7 +252,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="4" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QLabel" name="EmailLabel">
@@ -239,7 +286,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="5" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
        <widget class="QLabel" name="PhoneLabel">
@@ -273,7 +320,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="6" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_6">
       <item>
        <widget class="QLabel" name="DOBLabel">
@@ -307,7 +354,7 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
-    <item>
+    <item row="7" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_8">
       <item>
        <widget class="QLabel" name="label">
@@ -338,41 +385,103 @@ background-color: rgb(234, 234, 234);</string>
       </item>
      </layout>
     </item>
+    <item row="8" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_10">
+      <item>
+       <widget class="QLabel" name="chooseSequenceLabel">
+        <property name="text">
+         <string>Sequence</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_9">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>98</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QComboBox" name="sequenceComboBox">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(255, 255, 255);</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>None</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2010</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2011</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2012</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2013</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2014</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2015</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2016</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2017</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2018</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2019</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2020</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2021</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </item>
    </layout>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>-4</x>
-     <y>-4</y>
-     <width>411</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">image: url(:/Images/Images/ublogo.png);
-background-color: rgb(60, 4, 76);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>60</y>
-     <width>401</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(60, 4, 76);</string>
-   </property>
-   <property name="text">
-    <string>               Sequence Management System - Student Information</string>
-   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
